[package]
name = "learn-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "2.0.2"
thiserror = "1.0.4"
cw-storage-plus = "0.10.2"
# learn_contract = { path = "../learn-contract" }


