[package]
name = "learn-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.2.2", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "2.0.2"
thiserror = "1.0.4"
cw-storage-plus = "2.0.0"
cw20 = "2.0.0"
# learn_contract = { path = "../learn-contract" }


